feat:added Dto for user Authentication and verify otp
# Conflicts:
#	src/main/java/com/ideas2it/hirezy/controller/AuthenticationController.java
#	src/main/java/com/ideas2it/hirezy/model/AuthenticationResponse.java